Changed a few mapings to appropriate names in Courses Controller

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -9,5 +9,8 @@ spring:
     mvc:
         pathmatch:
           matching-strategy: ant-path-matcher
+    devtools:
+      restart:
+        enabled: false
 server:
   port: 8087
